user details ready

--- a/src/app/books/books-list/books-list.component.css
+++ b/src/app/books/books-list/books-list.component.css
@@ -73,3 +73,11 @@ th {
   background-color: #673ab7;
   color: #fff;
 }
+
+img {
+  border-radius: 40px;
+}
+
+.no-content {
+  margin-top: 20px;
+}
