--- a/src/app/books/book-details/book-details.component.css
+++ b/src/app/books/book-details/book-details.component.css
@@ -9,6 +9,7 @@
 .section-heading {
   margin: 0;
   font-weight: 500;
+  text-transform: uppercase;
 }
 
 hr.primary {
@@ -18,7 +19,7 @@ hr.primary {
 }
 
 .details-content {
-  padding: 40px 30px 20px 30px;
+  padding: 10px 30px 30px;
 }
 
 .action-button {
