--- a/src/app/books/books-list/books-list.component.html
+++ b/src/app/books/books-list/books-list.component.html
@@ -1,5 +1,5 @@
 <div id="cms">
-  <div class="row" *ngIf="!isAccount">
+  <div class="row">
     <div class="col-md-12 text-center align-content-center">
       <h1 class="section-heading text-center">{{pageTitle}}</h1>
       <hr class="primary">
@@ -8,7 +8,7 @@
       </h2>
     </div>
   </div>
-  <div *ngIf="!isAccount" [formGroup]="searchForm" class="row">
+  <div *ngIf="!isAccount && dataSource.data.length !== 0" [formGroup]="searchForm" class="row">
     <div class="col-md-9">
       <mat-form-field class="col-md-3 mx-auto">
         <mat-label>Book title</mat-label>
@@ -122,6 +122,10 @@
                    [pageSizeOptions]="[10, 25, 50]">
     </mat-paginator>
   </div>
-
-  <span *ngIf="dataSource.data.length === 0"> No items :( </span>
+  <div class="row no-content" *ngIf="dataSource.data.length === 0">
+    <div class="col-md-12 my-auto text-center">
+      <img src="assets/no-content.jpeg" alt="No items fount">
+      <h2>No items found</h2>
+    </div>
+  </div>
 </div>
