--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -5,7 +5,7 @@
       <hr class="primary">
     </div>
   </div>
-  <form [formGroup]="searchForm" class="row">
+  <form *ngIf="dataSource.data.length !== 0" [formGroup]="searchForm" class="row">
     <div class="col-md-9">
       <mat-form-field class="col-md-3 mx-auto">
         <mat-label>First name</mat-label>
@@ -101,5 +101,10 @@
         [pageSizeOptions]="[10, 25, 50]">
     </mat-paginator>
   </div>
-  <span *ngIf="dataSource.data.length === 0"> No items :( </span>
+  <div class="row no-content" *ngIf="dataSource.data.length === 0">
+    <div class="col-md-12 my-auto text-center">
+      <img src="assets/no-content.jpeg" alt="No items fount">
+      <h2>No items found</h2>
+    </div>
+  </div>
 </div>
