--- a/src/app/books/book-details/book-details.component.css
+++ b/src/app/books/book-details/book-details.component.css
@@ -55,3 +55,13 @@ span, input, textarea {
 textarea.mat-input-element.cdk-textarea-autosize {
   box-sizing: content-box;
 }
+
+.action-button {
+  border-radius: 300px;
+  width: fit-content;
+  outline: none;
+}
+
+.last-button {
+  margin-top: 15px;
+}
