--- a/src/app/reports/report-item/report-item.component.html
+++ b/src/app/reports/report-item/report-item.component.html
@@ -1,17 +1,34 @@
-<mat-dialog-content>
-  <form [formGroup]="form">
-    <mat-form-field appearance="fill">
-      <mat-label>Reported user: </mat-label>
-      <input matInput type="text" formControlName="user" readonly>
-    </mat-form-field> <br/>
-
-    <mat-form-field appearance="fill">
-      <mat-label>Report description: </mat-label>
-      <textarea matInput type="text" formControlName="description"></textarea>
-    </mat-form-field> <br/>
-  </form>
-</mat-dialog-content>
-<mat-dialog-actions align="center">
-  <button mat-raised-button color="accent" (click)="sendReport()" tabindex="1">Report</button>
-  <button mat-raised-button mat-dialog-close tabindex="-1">Cancel</button>
-</mat-dialog-actions>
+<div id="cms">
+  <mat-dialog-content>
+    <div class="container container-fluid">
+      <div class="row header">
+        <div class="col-md-12 text-center align-content-center">
+          <h1 class="section-heading text-center">report user</h1>
+          <hr class="primary">
+        </div>
+      </div>
+      <div class="row report-content">
+        <form [formGroup]="form" class="col-md-12 my-auto text-center">
+          <div class="row">
+            <span class="col-md-4 my-auto text-right">Reported user: </span>
+            <mat-form-field class="col-md-8 element">
+              <input matInput type="text" formControlName="user" readonly>
+            </mat-form-field>
+          </div>
+          <div class="row">
+            <span class="col-md-4 my-auto text-right">Reported user: </span>
+            <mat-form-field class="col-md-8 element">
+              <textarea matInput type="text" formControlName="description"></textarea>
+            </mat-form-field>
+          </div>
+        </form>
+      </div>
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <div class="buttons-section">
+      <button mat-raised-button class="action-button" color="accent" (click)="sendReport()" tabindex="1">Report</button>
+      <button mat-raised-button class="action-button" mat-dialog-close tabindex="-1">Cancel</button>
+    </div>
+  </mat-dialog-actions>
+</div>
